--- a/src/StatefulMenu/StatefulMenu.csproj
+++ b/src/StatefulMenu/StatefulMenu.csproj
@@ -12,11 +12,16 @@
         <PackageTags>console;menu;interactive;validation;localization</PackageTags>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <RepositoryUrl>https://github.com/Miclell/StatefulMenu</RepositoryUrl>
-        <Version>1.0.0</Version>
+        <Version>1.0.0-preview.1</Version>
         <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9"/>
+    </ItemGroup>
+
+
+    <ItemGroup>
+        <None Include="..\..\README.md" Pack="true" PackagePath="\" />
     </ItemGroup>
 </Project>
