--- a/src/StatefulMenu/StatefulMenu.csproj
+++ b/src/StatefulMenu/StatefulMenu.csproj
@@ -18,6 +18,12 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9"/>
+        <PackageReference Include="Scrutor" Version="6.1.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <InternalsVisibleTo Include="StatefulMenu.IntegrationTests" />
+        <InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
     </ItemGroup>
 
 
