--- a/src/StatefulMenu/StatefulMenu.csproj
+++ b/src/StatefulMenu/StatefulMenu.csproj
@@ -12,7 +12,7 @@
         <PackageTags>console;menu;interactive;validation;localization</PackageTags>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <RepositoryUrl>https://github.com/Miclell/StatefulMenu</RepositoryUrl>
-        <Version>1.0.0</Version>
+        <Version>$(Version)</Version>
         <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
