--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   DOTNET_VERSION: '9.0.x'
-  PROJECT_PATH: './StatefulMenu/'
+  PROJECT_PATH: './src/StatefulMenu/'
   CONFIGURATION: 'Release'
 
 jobs:
